force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Code_Complete__c.field-meta.xml
<CustomField>
    <fullName>Code_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Code checked in and follows department standards.</description>
    <inlineHelpText>Code checked in and follows department standards.</inlineHelpText>
    <label>Code Complete</label>
    <type>Checkbox</type>
</CustomField>