force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/delete_me__c.field-meta.xml
<CustomField>
    <fullName>delete_me__c</fullName>
    <label>delete me</label>
    <length>1</length>
    <type>Text</type>
</CustomField>