force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Exception_Complete__c.field-meta.xml
<CustomField>
    <fullName>Exception_Complete__c</fullName>
    <description>The date the scrum team marked the exception as complete.</description>
    <inlineHelpText>The date the scrum team marked the exception as complete.</inlineHelpText>
    <label>Exception Complete</label>
    <type>Date</type>
</CustomField>