force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Feature_Freeze_Status__c.field-meta.xml
<CustomField>
    <fullName>Feature_Freeze_Status__c</fullName>
    <label>Feature Freeze Status</label>
    <referenceTo>ADM_Feature_Freeze_Status__c</referenceTo>
    <relationshipName>R00NT0000000txXxMAI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>