force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <defaultValue>&quot;Overall Status&quot;</defaultValue>
    <description>Feature name</description>
    <inlineHelpText>Feature name</inlineHelpText>
    <label>Feature Name or Overall Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>