force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Major_Exception__c.field-meta.xml
<CustomField>
    <fullName>Major_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Exception</label>
    <type>Checkbox</type>
</CustomField>