force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Num_P2_Bugs_TF_to_Fix_Verify__c.field-meta.xml
<CustomField>
    <fullName>Num_P2_Bugs_TF_to_Fix_Verify__c</fullName>
    <inlineHelpText>Number of  Bugs and Test Failures to Fix.</inlineHelpText>
    <label>Num of Bugs/TF to Verify</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>