force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Number_of_P1_P2_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_P1_P2_Bugs__c</fullName>
    <description>Number of P1 and P2 bugs for this feature that are not verified and closed.</description>
    <inlineHelpText>Number of P1 and P2 bugs for this feature older than one week that are not verified and closed.  FF criterion is 0.</inlineHelpText>
    <label>Number of TF &gt; 1 Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>