force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Percent_Test_Cases_Automated__c.field-meta.xml
<CustomField>
    <fullName>Percent_Test_Cases_Automated__c</fullName>
    <inlineHelpText>Percent of test cases that are automated. DoD criterion is 70%.</inlineHelpText>
    <label>Percent Test Cases Automated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>