force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Plan_if_Exception_Denied__c.field-meta.xml
<CustomField>
    <fullName>Plan_if_Exception_Denied__c</fullName>
    <description>What are the options if this exception request is not approved?</description>
    <inlineHelpText>What are the options if this exception request is not approved?</inlineHelpText>
    <label>Plan if Exception Denied</label>
    <type>TextArea</type>
</CustomField>