force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Plan_to_Complete_by_Release_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Complete_by_Release_Freeze__c</fullName>
    <description>What is the plan – including dates and owners – to complete this work and the Release Sprint activities by Release Freeze?</description>
    <inlineHelpText>What is the plan – including dates and owners – to complete this work and the Release Sprint activities by Release Freeze?</inlineHelpText>
    <label>Plan to Complete by Release Freeze</label>
    <type>TextArea</type>
</CustomField>