force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Security_Standards_Met__c.field-meta.xml
<CustomField>
    <fullName>Security_Standards_Met__c</fullName>
    <description>Security Standards met and critical issues resolved.</description>
    <inlineHelpText>Security Standards met and critical issues resolved.</inlineHelpText>
    <label>Security Standards Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>