force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/SysTest_Status__c.field-meta.xml
<CustomField>
    <fullName>SysTest_Status__c</fullName>
    <description>Performance/scalability impact ascertained and sys testing scheduled/completed if required.</description>
    <inlineHelpText>Performance/scalability impact ascertained and sys testing scheduled/completed if required.</inlineHelpText>
    <label>SysTest Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled</fullName>
                <default>true</default>
                <label>Unscheduled</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>