force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/Usability_Testing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Usability_Testing_Complete__c</fullName>
    <description>Usability testing has been completed, with all resulting P1 and P2 UI issues fixed.</description>
    <inlineHelpText>Usability testing has been completed, with all resulting P1 and P2 UI issues fixed.</inlineHelpText>
    <label>Usability Testing Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>