force-app/main/default/objects/ADM_Feature_Freeze_Exception_Request__c/fields/User_Experience_Complete__c.field-meta.xml
<CustomField>
    <fullName>User_Experience_Complete__c</fullName>
    <description>UE has reviewed any new features; P1 and P2 UI bugs fixed.</description>
    <inlineHelpText>UE has reviewed any new features; P1 and P2 UI bugs fixed.</inlineHelpText>
    <label>User Experience Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>